--- a/index.html
+++ b/index.html
@@ -1,37 +1,217 @@
-<!DOCTYPE html>
-
-<html>
-
+<!doctype html>
+<html lang="id">
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Web Saltara'os 4.0">
 
-<meta charset="utf-8"> 
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
-<meta name="author" content="MFarelS"> 
-<meta name="description" content="OSIS SEMMA WEBSITE"> 
-<meta name="keywords" content="MFarelS, MFarelSZ, Farel, Zahra, Nur Azahra, M Farel S, M Farel S Z, NurAzahra, mfarelsz.xyz, http://mfarelsz.xyz, https://mfarelsz.xyz, http mfarelsz xyz, https mfarelsz xyz, mfarels, mfarelsz, mfarelsz.xyz, Muhammad Farel Syahtiawan, Muhammad Farel, Muhammad, Farel Muhammad Syahtiawan, Farel Syahtiawan Muhammad, Syahtiawan Farel Muhammad, Syahtiawan Muhammad Farel, nurazahra.xyz, Farell, MFarel, FarelS, MFarelS CH, github mfarels, MFarelS Website, MFarelS API, MFarelSZ Website, MFarelSZ API, FarelZahra, Farelll, Zahraaa, MFarelSNurAzahra, Data Covid 19, Rajin Nulis, Bot Nulis, TikTok Generator, YouTube Generator, API Nulis, Rest Api Nulis, Harta Tahta, Harta, Tahta, Harta Tahta Generator, Harta Tahta API, Rest Api Harta Tahta, Nulis Online, Nulis Website, Nulis Buku Online, buat kamu, buat-kamu, dzikir, dzikir online, halah Generator, hilih Generator, huluh Generator, heleh Generator, holoh Generator, halah, hilih, huluh, heleh, holoh, Generator, jam, game, simple game, miniature, miniatur"> 
-<link rel="shortcut icon" href="https://raw.githubusercontent.com/MFarelS/MFarelS/master/MFarelS_New.jpg"> 
-<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap" rel="stylesheet"> 
-<meta property="og:image" content="https://raw.githubusercontent.com/MFarelS/MFarelS/master/MFarelS_New.jpg"> 
-<meta property="og:type" content="website" /> 
-<meta property="og:url" content="https://osis95.xyz/" /> 
-<meta property="og:title" content="Saltara'os 4.0" /> 
-<meta property="og:description" content="OSIS SEMMA WEBSITE"> 
-<meta property="og:site_name" content="MFarelS"> 
-<link rel="canonical" href="https://osis95.xyz/"> 
-<link rel="author" href="https://osis95.xyz/"> 
-<title>Saltara'os 4.0</title> 
-<link rel="stylesheet" type="text/css" href="style.css">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/front.css">
+	<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
+	<link rel="shortcut icon" href="img/osis.png">
 
+	<title>Welcome to Saltara'os 4.0 Website</title>
 </head>
+<body id="page-top">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="mainNav">
+		<div class="container">
+			<a class="navbar-brand font-weight-bold" href="./">Saltara'os 4.0</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+			    <ul class="navbar-nav ml-auto">
+			    	<li class="nav-item active">
+			        	<a class="nav-link js-scroll-trigger" href="">Home<span class="sr-only">(current)</span></a>
+			    	</li>
+			    	<li class="nav-item">
+			        	<a class="nav-link js-scroll-trigger" href="pengurus-organisasi/">Pengurus Organisasi</a>
+			      	</li>
+			      	<li class="nav-item">
+			        	<a class="nav-link js-scroll-trigger" href="absen/">Daftar Absen</a>
+			      	</li>
+			      	<li class="nav-item">
+			        	<a class="nav-link js-scroll-trigger" href="kontak/">Kontak</a>
+				</li>
+			    </ul>
+			</div>
+		</div>
+	</nav>
 
-<body>
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container">
+			<h1 class="display-4">Welcome to Website <br><span class="font-weight-bold">Saltara'os 4.0</span></h1>
+			<hr class="my-4">
+			<p class="lead">OSIS SMPN 95 JKT</p>
+ 		</div>
+	</div>
 
-<section>
-<div class="container">
-<h1 data-text="codewithrandom">Website Ini Masih Tahap Pembuatan</h1>
-</div>
-</section>
+	<section class="students">
+		<div class="container">
+			<div class="section-header text-center">
+				<h1>Daftar Pengurus Organisasi</h1>
+				<div class="divider mx-auto"></div>
+			</div>
+			<div class="section-body">
+				<div class="row">
+					<div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Muhammad Elo Saputra</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Muhammad Ardi Darmawan</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Muhammad Yusuf Aditya Rizky</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Fazya Anjelir Khairunnisa</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Muhammad Ardi Darmawan</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Salwa Nazhifa Azzahra</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Davina Putri Sahubawa</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Annisa Sayahdina</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Keisha Hanania Raziq </div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Afgansyah Husam Mahdavikia </div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="text-right mt-2">
+					<a href="pengurus-organisasi/">Lihat Selengkapnya ></a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div><p class="love">Made With ❤️ By <a rel="nofollow"
+                href="https://mfarels.id" target="_parent">MFarelS✓</a><br>© 2021 <a rel="nofollow"
+                href="https://mfarels.id" target="_parent">MFarelS✓</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
+			</div>
+		</div>
+	</footer>
 
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
+
+  <script>swal({
+    title: "Hi!, Selamat Datang Di Website OSIS SMPN 95 JKT-!!",
+    position: "central",
+    backdrop: "#fff0",
+    background: "#fff",
+    allowOutsideClick: true,
+    allowEscapeKey: true,
+    allowEnterKey: true,
+    showConfirmButton: true,
+    showCancelButton: false,
+    confirmButtonText: 'Oksss-!!',
+    timer: 5000
+  })</script>
 </body>
-
 </html>
