Instagram : @osismpn95jkt
https://www.instagram.com/osismpn95jkt/

--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="MFarelS">
 	<meta name="description" content="Web Saltara'os 4.0">
+  <link rel="shortcut icon" href="img/osis.png">
+  <meta property="og:image" content="img/osis.png">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://osis95.xyz/" />
+  <meta property="og:title" content="Welcome to Saltara'os 4.0 Website" />
+  <meta property="og:description" content="Web Saltara'os 4.0">
+  <meta property="og:site_name" content="MFarelS">
+  <link rel="canonical" href="https://osis95.xyz/">
+  <link rel="author" href="https://mfarels.id/">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -210,7 +220,7 @@
     allowEnterKey: true,
     showConfirmButton: true,
     showCancelButton: false,
-    confirmButtonText: 'Oksss-!!',
+    confirmButtonText: 'Oke',
     timer: 5000
   })</script>
 </body>
