Instagram : @osismpn95jkt
https://www.instagram.com/osismpn95jkt/

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="MFarelS">
 	<meta name="description" content="Web Saltara'os 4.0">
-  <link rel="shortcut icon" href="img/osis.png">
-  <meta property="og:image" content="img/osis.png">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/MFarelS/OSIS-SMPN-95-Jakarta/master/img/osis.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/MFarelS/OSIS-SMPN-95-Jakarta/master/img/osis.png">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://osis95.xyz/" />
   <meta property="og:title" content="Welcome to Saltara'os 4.0 Website" />
