--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <link rel="shortcut icon" href="https://raw.githubusercontent.com/MFarelS/OSIS-SMPN-95-Jakarta/master/img/osis.png">
   <meta property="og:image" content="https://raw.githubusercontent.com/MFarelS/OSIS-SMPN-95-Jakarta/master/img/osis.png">
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://osis95.xyz/" />
-  <meta property="og:title" content="Welcome to Saltara'os 4.0 Website" />
-  <meta property="og:description" content="Web Saltara'os 4.0">
-  <meta property="og:site_name" content="MFarelS">
-  <link rel="canonical" href="https://osis95.xyz/">
+  <meta property="og:url" content="https://siswa7.xyz/" />
+  <meta property="og:title" content="Welcome to Siswa 7 Website" />
+  <meta property="og:description" content="Web Siswa 7">
+  <meta property="og:site_name" content="Fadhli">
+  <link rel="canonical" href="https://siswa7.xyz/">
   <link rel="author" href="https://mfarels.id/">
 
 	<!-- Bootstrap CSS -->
@@ -22,12 +22,12 @@
 	<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
 	<link rel="shortcut icon" href="img/osis.png">
 
-	<title>Welcome to Saltara'os 4.0 Website</title>
+	<title>Welcome to Siswa 7 Website</title>
 </head>
 <body id="page-top">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="mainNav">
 		<div class="container">
-			<a class="navbar-brand font-weight-bold" href="./">Saltara'os 4.0</a>
+			<a class="navbar-brand font-weight-bold" href="./">Siswa 7</a>
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			</button>
@@ -52,7 +52,7 @@
 
 	<div class="jumbotron jumbotron-fluid">
 		<div class="container">
-			<h1 class="display-4">Welcome to Website <br><span class="font-weight-bold">Saltara'os 4.0</span></h1>
+			<h1 class="display-4">Welcome to Website <br><span class="font-weight-bold">Siswa 7</span></h1>
 			<hr class="my-4">
 			<p class="lead">OSIS SMPN 95 JKT</p>
  		</div>
@@ -197,8 +197,8 @@
 		<div class="container">
 			<div class="row">
 				<div><p class="love">Made With ❤️ By <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">MFarelS✓</a><br>© 2021 <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">MFarelS✓</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
+                href="https://mfarels.id" target="_parent">Fadhli✓</a><br>© 2021 <a rel="nofollow"
+                href="https://mfarels.id" target="_parent">Fadhli✓</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
 			</div>
 		</div>
 	</footer>
