--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="MFarelS">
+  <meta name="author" content="Fadhli">
 	<meta name="description" content="Web Saltara'os 4.0">
   <link rel="shortcut icon" href="https://raw.githubusercontent.com/MFarelS/OSIS-SMPN-95-Jakarta/master/img/osis.png">
   <meta property="og:image" content="https://raw.githubusercontent.com/MFarelS/OSIS-SMPN-95-Jakarta/master/img/osis.png">
@@ -13,7 +13,7 @@
   <meta property="og:description" content="Web Siswa 7">
   <meta property="og:site_name" content="Fadhli">
   <link rel="canonical" href="https://siswa7.xyz/">
-  <link rel="author" href="https://mfarels.id/">
+  <link rel="author" href="https://bit.ly/ClickDiSinii/">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -54,7 +54,7 @@
 		<div class="container">
 			<h1 class="display-4">Welcome to Website <br><span class="font-weight-bold">Siswa 7</span></h1>
 			<hr class="my-4">
-			<p class="lead">OSIS SMPN 95 JKT</p>
+			<p class="lead">SISWA SMKN 7 BANDUNG</p>
  		</div>
 	</div>
 
