--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Fadhli">
-	<meta name="description" content="Web Saltara'os 4.0">
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/MFarelS/OSIS-SMPN-95-Jakarta/master/img/osis.png">
-  <meta property="og:image" content="https://raw.githubusercontent.com/MFarelS/OSIS-SMPN-95-Jakarta/master/img/osis.png">
+	<meta name="description" content="Web Siswa 7">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/xanzheus/SISWA-SMKN7-BANDUNG/master/img/osis.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/xanzheus/SISWA-SMKN7-BANDUNG/master/img/osis.png">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://siswa7.xyz/" />
   <meta property="og:title" content="Welcome to Siswa 7 Website" />
@@ -73,7 +73,7 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Muhammad Elo Saputra</div>
+									<div class="student-name mb-2">Fadhli Gamteng</div>
 								</div>
 							</div>
 						</div>
