--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
 
   <script>swal({
-    title: "Hi!, Selamat Datang Di Website OSIS SMPN 95 JKT-!!",
+    title: "Hai!, Selamat Datang Di Website SISWA SMKN 7 BANDUNG",
     position: "central",
     backdrop: "#fff0",
     background: "#fff",
