--- a/pengurus-organisasi/index.html
+++ b/pengurus-organisasi/index.html
@@ -4,7 +4,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Daftar Pengurus Organisasi OSIS SMPN 95 JAKARTA">
+	<meta name="description" content="Daftar Siswa Smkn 7 Bandung">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="../css/icon.css">
 	<link rel="shortcut icon" href="../img/osis.png">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<title>Pengurus Organisasi</title>
+	<title>Siswa Organisasi</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -28,7 +28,7 @@
 			        	<a class="nav-link js-scroll-trigger" href="../">Home<span class="sr-only">(current)</span></a>
 			    	</li>
 			    	<li class="nav-item">
-			        	<a class="nav-link js-scroll-trigger" href="../pengurus-organisasi/">Pengurus Organisasi</a>
+			        	<a class="nav-link js-scroll-trigger" href="../pengurus-organisasi/">Siswa Organisasi</a>
 			      	</li>
 			      	<li class="nav-item">
 			        	<a class="nav-link js-scroll-trigger" href="../absen/">Daftar Absen</a>
@@ -44,7 +44,7 @@
 		<section class="students">
 			<div class="container">
 				<div class="section-header">
-					<h1>Daftar Pengurus Organisasi</h1>
+					<h1>Daftar Siswa Organisasi</h1>
 					<div class="divider"></div>
 				</div>
 				<div class="section-body">
@@ -56,7 +56,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Muhammad Elo Saputra</div>
+										<div class="student-name mb-2">Fadhli Gamteng</div>
 									</div>				
 								</div>
 							</div>
