--- a/absen/index.html
+++ b/absen/index.html
@@ -4,7 +4,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Daftar Absen Pengurus Organisasi OSIS SMPN 95 JAKARTA">
+	<meta name="description" content="Daftar Absen Siswa SMKN 7 BANDUNG">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -19,7 +19,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
-			<a class="navbar-brand font-weight-bold" href="../">Saltara'os 4.0</a>
+			<a class="navbar-brand font-weight-bold" href="../">Siswa 7</a>
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			</button>
@@ -128,9 +128,9 @@
 								<tbody>
 									<tr>
 										<td>1</td>
-										<td>Muhammad Elo Saputra</td>
+										<td>Fadhli Gamteng</td>
 										<td>Ketua Osis</td>
-										<td>8E</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>2</td>
@@ -452,8 +452,8 @@
 		<div class="container">
 			<div class="row">
 				<div><p class="love">Made With ❤️ By <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">MFarelS✓</a><br>© 2021 <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">MFarelS✓</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
+                href="https://mfarels.id" target="_parent">Fadhli✓</a><br>© 2021 <a rel="nofollow"
+                href="https://mfarels.id" target="_parent">Fadhli✓</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
 			</div>
 		</div>
 	</footer>
