--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Fadhli Gamteng</div>
+									<div class="student-name mb-2">R. Santika Rosianti</div>
 								</div>
 							</div>
 						</div>
