--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Muhammad Ardi Darmawan</div>
+									<div class="student-name mb-2">Drs. Eko Suprajitno</div>
 								</div>
 							</div>
 						</div>
@@ -97,7 +97,7 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Muhammad Yusuf Aditya Rizky</div>
+									<div class="student-name mb-2">Teguh Purwoko,S.Pd</div>
 								</div>
 							</div>
 						</div>
@@ -109,7 +109,7 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Fazya Anjelir Khairunnisa</div>
+									<div class="student-name mb-2">Sandra Wisnu W,STeks</div>
 								</div>
 							</div>
 						</div>
@@ -121,7 +121,7 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Muhammad Ardi Darmawan</div>
+									<div class="student-name mb-2">Martinah,S.Pd.,M.MPd</div>
 								</div>
 							</div>
 						</div>
@@ -133,7 +133,7 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Salwa Nazhifa Azzahra</div>
+									<div class="student-name mb-2">Suly Susantiyani, S.iT</div>
 								</div>
 							</div>
 						</div>
@@ -145,7 +145,7 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Davina Putri Sahubawa</div>
+									<div class="student-name mb-2">Dra. Siti Jubaedah, M.Ag</div>
 								</div>
 							</div>
 						</div>
@@ -157,7 +157,7 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Annisa Sayahdina</div>
+									<div class="student-name mb-2">Rahayu Nirawati.F, S.Pd., M.MPd</div>
 								</div>
 							</div>
 						</div>
@@ -169,7 +169,7 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Keisha Hanania Raziq </div>
+									<div class="student-name mb-2">Ajeng Fatiyah A., S.Pd</div>
 								</div>
 							</div>
 						</div>
@@ -181,7 +181,33 @@
 									<img src="img/MFarelS.jpg">
 								</div>
 								<div class="col-8 py-3 px-3">
-									<div class="student-name mb-2">Afgansyah Husam Mahdavikia </div>
+									<div class="student-name mb-2">Suwita, S.Pd, M.M</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+                                <div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Dra. Hanny Kartini</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+                                <div class="col-md-6 mb-5">
+						<div class="card">
+							<div class="row">
+								<div class="col-4">
+									<img src="img/MFarelS.jpg">
+								</div>
+								<div class="col-8 py-3 px-3">
+									<div class="student-name mb-2">Elis Mulyati, AT, M.M</div>
 								</div>
 							</div>
 						</div>
