--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<section class="students">
 		<div class="container">
 			<div class="section-header text-center">
-				<h1>Daftar Pengurus Organisasi</h1>
+				<h1>Daftar Guru Siswa</h1>
 				<div class="divider mx-auto"></div>
 			</div>
 			<div class="section-body">
