--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
 
   <script>swal({
-    title: "Selamat Datang Di Website SISWA SMKN 7 BANDUNG",
+    title: "SELAMAT DATANG DI WEBSITE SISWA XI KT1 SMKN 7 BANDUNG",
     position: "central",
     backdrop: "#fff0",
     background: "#fff",
