--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 		<div class="container">
 			<div class="row">
 				<div><p class="love">Made With ❤️ By <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">Fadhli✓</a><br>© 2021 <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">Fadhli✓</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
+                href="https://www.google.com/url?sa=t&source=web&rct=j&url=http://www.smkn7bandung.sch.id/&ved=2ahUKEwjf3s7jtp_zAhXQb30KHf75B_oQFnoECCcQAg&usg=AOvVaw3xHZ_JJmlOmVR4UWfKfyaS" target="_parent">Fadhli</a><br>© 2021 <a rel="nofollow"
+                href="https://www.google.com/url?sa=t&source=web&rct=j&url=http://www.smkn7bandung.sch.id/&ved=2ahUKEwjf3s7jtp_zAhXQb30KHf75B_oQFnoECCcQAg&usg=AOvVaw3xHZ_JJmlOmVR4UWfKfyaS" target="_parent">Fadhli</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
 			</div>
 		</div>
 	</footer>
@@ -237,7 +237,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
 
   <script>swal({
-    title: "SELAMAT DATANG DI WEBSITE SISWA XI KT1 SMKN 7 BANDUNG",
+    title: "SELAMAT DATANG/nDI WEBSITE SISWA/nXI KT1 SMKN 7 BANDUNG",
     position: "central",
     backdrop: "#fff0",
     background: "#fff",
