--- a/absen/index.html
+++ b/absen/index.html
@@ -128,27 +128,27 @@
 								<tbody>
 									<tr>
 										<td>1</td>
-										<td>Fadhli Gamteng</td>
-										<td>Ketua Osis</td>
+										<td>Aldhi Meyrival R</td>
+										<td>-</td>
 										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>2</td>
-										<td>Muhammad Ardi Darmawan</td>
-										<td>Wakil ketua OSIS 1</td>
-										<td>8F</td>
+										<td>Alya Adelista</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>3</td>
-										<td>Muhammad Yusuf Aditya Rizky</td>
-										<td>Wakil ketua OSIS 2</td>
-										<td>7E</td>
+										<td>Amelia Fauziah</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>4</td>
-										<td>Fazya Anjelir Khairunnisa</td>
-										<td>Sekretaris 1</td>
-										<td>8C</td>
+										<td>Azkhya Dwi Dhenyka</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>5</td>
@@ -158,33 +158,33 @@
 									</tr>
 									<tr>
 										<td>6</td>
-										<td>Davina Putri Sahubawa</td>
-										<td>Bendahara 1</td>
-										<td>8C</td>
+										<td>Bintang Julia Jelita</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>7</td>
-										<td>Annisa Sayahdina</td>
-										<td>Bendahara 2</td>
-										<td>7E</td>
+										<td>Dewulan Siti</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>8</td>
-										<td>Keisha Hanania Raziq</td>
-										<td>Humas 1</td>
-										<td>8D</td>
+										<td>Diki Sopiyan</td>
+                                                                                <td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>9</td>
-										<td>Afgansyah Husam Mahdavikia</td>
-										<td>Humas 2</td>
-										<td>7E</td>
+										<td>Fadhli Ryan Firmansyah</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>10</td>
-										<td>Affan Abdillah Hasan</td>
-										<td>Sekbid 1 - Koordinator bidang</td>
-										<td>8A</td>
+										<td>Fauzi Firmansyah</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>11</td>
