--- a/absen/index.html
+++ b/absen/index.html
@@ -152,13 +152,13 @@
 									</tr>
 									<tr>
 										<td>5</td>
-										<td>Salwa Nazhifa Azzahra</td>
-										<td>Sekretaris 2</td>
-										<td>7B</td>
+										<td>Bintang Julia Jelita</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>6</td>
-										<td>Bintang Julia Jelita</td>
+										<td>Darin Sandra Camila</td>
 										<td>-</td>
 										<td>11 KT1</td>
 									</tr>
@@ -188,202 +188,143 @@
 									</tr>
 									<tr>
 										<td>11</td>
-										<td>Asfa Al Maghfirah</td>
-										<td>Anggota Sekbid 1</td>
-										<td>7C</td>
+										<td>Hanna Rahma Aulia</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>12</td>
-										<td>Moreno Damanik</td>
-										<td>Sekbid 1 - Koordinator bidang</td>
-										<td>8D</td>
+										<td>Ikhsan Aditya</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>13</td>
-										<td>Feodora Mariska Berliana Pardede</td>
-										<td>Anggota Sekbid 1</td>
-										<td>7C</td>
+										<td>M Jordan Meidia Pratama</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>14</td>
-										<td>Vivi Maulidani</td>
-										<td>Sekbid 2 - Koordinator bidang</td>
-										<td>8D</td>
+										<td>Mochamad Risky Firmansyah</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>15</td>
-										<td>Naya Andhira Tajudin</td>
-										<td>Anggota Sekbid 2</td>
-										<td>7D</td>
+										<td>Muhammad Deras Banyu</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>16</td>
-										<td>Kaylamevia Ariyanto</td>
-										<td>Anggota Sekbid 2</td>
-										<td>8B</td>
+										<td>Muhammad Kamal Hidayatullah</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>17</td>
-										<td>Amira Aurelia Mazaya</td>
-										<td>Anggota Sekbid 2</td>
-										<td>7B</td>
+										<td>Nabila Chaerunisa</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>18</td>
-										<td>Rotua Vicky Winardo Pardede</td>
-										<td>Sekbid 3 - Koordinator bidang</td>
-										<td>8D</td>
+										<td>Nadiva Natania Nurdin</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>19</td>
-										<td>Khaidar Khalid</td>
-										<td>Anggota Sekbid 3</td>
-										<td>7G</td>
+										<td>Nadya Silvy Rabani</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>20</td>
-										<td>Hasht Behest Esfahan</td>
-										<td>Anggota Sekbid 3</td>
-										<td>8A</td>
+										<td>Nailla Fadillah Putri</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>21</td>
-										<td>Nabilah Rahmawati</td>
-										<td>Anggota Sekbid 3</td>
-										<td>8B</td>
+										<td>Nawrah Tri Andifa</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>22</td>
-										<td>Naila Fariha</td>
-										<td>Anggota Sekbid 3</td>
-										<td>8C</td>
+										<td>Novia Selvianto</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>23</td>
-										<td>Shabina Salsabila</td>
-										<td>Anggota Sekbid 3</td>
-										<td>8B</td>
+										<td>Raafi Irawan</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>24</td>
-										<td>Naufal Khalish</td>
-										<td>Sekbid 4 - Koordinator bidang</td>
-										<td>8B</td>
+										<td>Rhadian Ramadhansyah</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>25</td>
-										<td>Fitria Ramadhani</td>
-										<td>Anggota Sekbid 4</td>
-										<td>7G</td>
+										<td>Risma Amalia Putri</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>26</td>
-										<td>Zava Zaneta Putra Irvani</td>
-										<td>Anggota Sekbid 4</td>
-										<td>8F</td>
+										<td>Rizki Pradana</td>
+										<td>KM</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>27</td>
-										<td>Aisyah Nisrina</td>
-										<td>Anggota Sekbid 4</td>
-										<td>8A</td>
+										<td>Salma Haifa Shalsabilla</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>28</td>
-										<td>Meidina Athaya</td>
-										<td>Anggota Sekbid 4</td>
-										<td>8B</td>
+										<td>Siti Widia</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>29</td>
-										<td>Anindita Dinda Tazkia</td>
-										<td>Sekbid 5 – Koordinator bidang</td>
-										<td>8F</td>
+										<td>Tata Nur Arifin</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>30</td>
-										<td>Zahra Dwi Syafira</td>
-										<td>Anggota Sekbid 5</td>
-										<td>7B</td>
+										<td>Vina Jisnawati</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>31</td>
-										<td>Nazhifa Nabila Putri</td>
-										<td>Anggota Sekbid 5</td>
-										<td>7E</td>
+										<td>Yunarti Tesalonika</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>32</td>
-										<td>Amanda Rizna Putri Pohan</td>
-										<td>Anggota Sekbid 5</td>
-										<td>8A</td>
+										<td>Zikra Purnama</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
 										<td>33</td>
-										<td>Naznin Raina Salwa</td>
-										<td>Anggota Sekbid 5</td>
-										<td>8D</td>
+										<td>Zulfa Sabbihisma Primestia</td>
+										<td>-</td>
+										<td>11 KT1</td>
 									</tr>
 									<tr>
-										<td>34</td>
-										<td>Mohammad Alvi Rizky</td>
-										<td>Sekbid 6 – Koordinator bidang</td>
-										<td>8D</td>
-									</tr>
-									<tr>
-										<td>35</td>
-										<td>Alvaro Putra Pratama</td>
-										<td>Anggota Sekbid 6</td>
-										<td>7B</td>
-									</tr>
-									<tr>
-										<td>36</td>
-										<td>Muhammad Farel Syahtiawan</td>
-										<td>Anggota Sekbid 6</td>
-										<td>8E</td>
-									</tr>
-									<tr>
-										<td>37</td>
-										<td>Muhammad Ariq</td>
-										<td>Anggota Sekbid 6</td>
-										<td>8F</td>
-									</tr>
-									<tr>
-										<td>38</td>
-										<td>Naila Kirana Maharani</td>
-										<td>Sekbid 7 – Koordinator bidang</td>
-										<td>8A</td>
-									</tr>
-									<tr>
-										<td>39</td>
-										<td>Almer Clearesta Bila</td>
-										<td>Anggota Sekbid 7</td>
-										<td>7F</td>
-									</tr>
-									<tr>
-										<td>40</td>
-										<td>Anjani Maqfirohmah</td>
-										<td>Anggota Sekbid 7</td>
-										<td>8D</td>
-									</tr>
-									<tr>
-										<td>41</td>
-										<td>Fatimah Febrianti</td>
-										<td>Anggota Sekbid 7</td>
-										<td>8C</td>
-									</tr>
-									<tr>
-										<td>42</td>
-										<td>Shireen Aulia Faqih</td>
-										<td>Anggota Sekbid 7</td>
-										<td>7E</td>
-									</tr>
-									<tr>
-										<td>43</td>
-										<td>Reva Aulia</td>
-										<td>Anggota Sekbid 7</td>
-										<td>7E</td>
-									</tr>
 								</tbody>
 								</table>
                     		</div>
@@ -391,7 +332,7 @@
             		</div>
             		<div class="card mb-5">
                 		<div class="card-header">
-                    		<h3>Keterangan Bidang :</h3>
+                    		<h3>Keterangan Bidang Mapel:</h3>
                 		</div>
                 		<div class="card-body">
                     		<div class="table-responsive">
@@ -406,38 +347,38 @@
 								<tbody>
 									<tr>
 										<td>1</td>
-										<td>Sekbid 1 / Bidang I</td>
-										<td>Kerohanian</td>
+										<td>Mapel 1 / Bidang I</td>
+										<td>PJOK, PPKN, EFKT, PKK</td>
 									</tr>
 									<tr>
 										<td>2</td>
-										<td>Sekbid 2 / Bidang II</td>
-										<td>Cinta Tanah Air</td>
+										<td>Mapel 2 / Bidang II</td>
+										<td>PAZW, EFKT</td>
 									</tr>
 									<tr>
 										<td>3</td>
-										<td>Sekbid 3 / Bidang III</td>
-										<td>Pendidikan Dan Pendahuluan Bela Negara</td>
+										<td>Mapel 3 / Bidang III</td>
+										<td>PPKT, PKK</td>
 									</tr>
 									<tr>
 										<td>4</td>
-										<td>Sekbid 4 / Bidang IV</td>
-										<td>Berorganisasi, Pendidikan , Kepimpinan, dan Politik</td>
+										<td>Mapel 4 / Bidang IV</td>
+										<td>MTK, B.INDO, PAZW, BK</td>
 									</tr>
 									<tr>
 										<td>5</td>
-										<td>Sekbid 5 / Bidang V</td>
-										<td>Budi Pekerti Luhur</td>
+										<td>Mapel 5 / Bidang V</td>
+										<td>PABP, B.INGGRIS, SUNDA, PPKT</td>
 									</tr>
 									<tr>
 										<td>6</td>
-										<td>Sekbid 6 / Bidang VI</td>
-										<td>Olahraga</td>
+										<td>Mapel 6 / Bidang VI</td>
+										<td>-</td>
 									</tr>
 									<tr>
 										<td>7</td>
-										<td>Sekbid 7 / Bidang VII</td>
-										<td>Apresiasi Karya Seni</td>
+										<td>Mapel 7 / Bidang VII</td>
+										<td>-</td>
 									</tr>
 								</tbody>
 								</table>
@@ -452,8 +393,8 @@
 		<div class="container">
 			<div class="row">
 				<div><p class="love">Made With ❤️ By <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">Fadhli✓</a><br>© 2021 <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">Fadhli✓</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
+                href="https://www.google.com/url?sa=t&source=web&rct=j&url=http://www.smkn7bandung.sch.id/&ved=2ahUKEwjf3s7jtp_zAhXQb30KHf75B_oQFnoECCcQAg&usg=AOvVaw3xHZ_JJmlOmVR4UWfKfyaS" target="_parent">Fadhli</a><br>© 2021 <a rel="nofollow"
+                href="https://www.google.com/url?sa=t&source=web&rct=j&url=http://www.smkn7bandung.sch.id/&ved=2ahUKEwjf3s7jtp_zAhXQb30KHf75B_oQFnoECCcQAg&usg=AOvVaw3xHZ_JJmlOmVR4UWfKfyaS" target="_parent">Fadhli</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
 			</div>
 		</div>
 	</footer>
