--- a/absen/index.html
+++ b/absen/index.html
@@ -112,7 +112,7 @@
 			<div class="section-body">
 				<div class="card mb-5">
                 		<div class="card-header">
-                    		<h3>List :</h3>
+                    		<h3>List Absen :</h3>
                 		</div>
                 		<div class="card-body">
                     		<div class="table-responsive">
