--- a/absen/index.html
+++ b/absen/index.html
@@ -347,37 +347,37 @@
 								<tbody>
 									<tr>
 										<td>1</td>
-										<td>Mapel 1 / Bidang I</td>
+										<td>Senin / Mapel I</td>
 										<td>PJOK, PPKN, EFKT, PKK</td>
 									</tr>
 									<tr>
 										<td>2</td>
-										<td>Mapel 2 / Bidang II</td>
+										<td>Selasa / Mapel II</td>
 										<td>PAZW, EFKT</td>
 									</tr>
 									<tr>
 										<td>3</td>
-										<td>Mapel 3 / Bidang III</td>
+										<td>Rabu / Mapel III</td>
 										<td>PPKT, PKK</td>
 									</tr>
 									<tr>
 										<td>4</td>
-										<td>Mapel 4 / Bidang IV</td>
+										<td>Kamis / Mapel IV</td>
 										<td>MTK, B.INDO, PAZW, BK</td>
 									</tr>
 									<tr>
 										<td>5</td>
-										<td>Mapel 5 / Bidang V</td>
+										<td>Jumat / Mapel V</td>
 										<td>PABP, B.INGGRIS, SUNDA, PPKT</td>
 									</tr>
 									<tr>
 										<td>6</td>
-										<td>Mapel 6 / Bidang VI</td>
+										<td>Sabtu / Libur I</td>
 										<td>-</td>
 									</tr>
 									<tr>
 										<td>7</td>
-										<td>Mapel 7 / Bidang VII</td>
+										<td>Minggu 7 / Libur II</td>
 										<td>-</td>
 									</tr>
 								</tbody>
