--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body id="page-top">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="mainNav">
 		<div class="container">
-			<a class="navbar-brand font-weight-bold" href="./">Siswa 7</a>
+			<a class="navbar-brand font-weight-bold" href="./">XI KT1</a>
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			</button>
@@ -37,7 +37,7 @@
 			        	<a class="nav-link js-scroll-trigger" href="">Home<span class="sr-only">(current)</span></a>
 			    	</li>
 			    	<li class="nav-item">
-			        	<a class="nav-link js-scroll-trigger" href="pengurus-organisasi/">Pengurus Organisasi</a>
+			        	<a class="nav-link js-scroll-trigger" href="pengurus-organisasi/">Daftar Guru</a>
 			      	</li>
 			      	<li class="nav-item">
 			        	<a class="nav-link js-scroll-trigger" href="absen/">Daftar Absen</a>
