--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:image" content="https://raw.githubusercontent.com/xanzheus/SISWA-SMKN7-BANDUNG/master/img/osis.png">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://siswa7.xyz/" />
-  <meta property="og:title" content="Welcome to Siswa 7 Website" />
+  <meta property="og:title" content="WEB XI KT1" />
   <meta property="og:description" content="Web Siswa 7">
   <meta property="og:site_name" content="Fadhli">
   <link rel="canonical" href="https://siswa7.xyz/">
@@ -22,7 +22,7 @@
 	<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
 	<link rel="shortcut icon" href="img/osis.png">
 
-	<title>Welcome to Siswa 7 Website</title>
+	<title>Welcome To Website XI KT1</title>
 </head>
 <body id="page-top">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="mainNav">
