--- a/kontak/index.html
+++ b/kontak/index.html
@@ -91,7 +91,7 @@
 				<div class="section-body">
 					<div class="card mb-5">
                 		<div class="card-header">
-                    		<h3>Muhammad Elo Saputra</h3>
+                    		<h3>Fadhli Ryan Firmansyah</h3>
                 		</div>
                 		<div class="card-body">
                     		<div class="table-responsive">
@@ -105,11 +105,11 @@
 		                            <tbody>
 		                                <tr>
 		                                    <td>1</td>
-		                                    <td><a href="https://www.instagram.com/osismpn95jkt/">Instagram : @osismpn95jkt</a></td>
+		                                    <td><a href="https://www.instagram.com/smkn7bandung/">Instagram : @smkn7bandung</a></td>
 		                                </tr>
 		                                 <tr>
 		                                    <td>2</td>
-		                                    <td><a href="https://wa.me/+6281281526632">WhatsApp : +62 812-1908-7237</a></td>
+		                                    <td><a href="https://wa.me/+6287714745440">WhatsApp : +62 877-1474-5440</a></td>
 		                                </tr>
                                		</tbody>
 								</table>
@@ -136,7 +136,7 @@
 		                                </tr>
 		                                <tr>
                                     		<td>2</td>
-		                                    <td><a href="https://wa.me/6281219087237">WhatsApp : +62 812-1908-7237</a></td>
+		                                    <td><a href="https://wa.me/6287714745440">WhatsApp : +62 877-1474-5440</a></td>
                                			</tr>
 		                                <tr>
                                     		<td>3</td>
@@ -148,11 +148,11 @@
 		                                </tr>
 										<tr>
 		                                    <td>5</td>
-		                                    <td><a href="mailto:mfarels@mfarels.id">Email : mfarels@mfarels.id</a></td>
+		                                    <td><a href="mailto:mfarels@mfarels.id">Email : fadhlirynx16@gmail.com</a></td>
 		                                </tr>
 		                                <tr>
                                     		<td>6</td>
-		                                    <td><a href="https://github.com/MFarelS">GitHub : MFarelS</a></td>
+		                                    <td><a href="https://github.com/xanzheus">GitHub : xanzheus</a></td>
                                			</tr>
 		                                <tr>
                                     		<td>7</td>
@@ -213,8 +213,8 @@
 		<div class="container">
 			<div class="row">
 				<div><p class="love">Made With ❤️ By <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">MFarelS✓</a><br>© 2021 <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">MFarelS✓</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
+                href="https://www.google.com/url?sa=t&source=web&rct=j&url=http://www.smkn7bandung.sch.id/&ved=2ahUKEwjf3s7jtp_zAhXQb30KHf75B_oQFnoECCcQAg&usg=AOvVaw3xHZ_JJmlOmVR4UWfKfyaS" target="_parent">Fadhli</a><br>© 2021 <a rel="nofollow"
+                href="https://www.google.com/url?sa=t&source=web&rct=j&url=http://www.smkn7bandung.sch.id/&ved=2ahUKEwjf3s7jtp_zAhXQb30KHf75B_oQFnoECCcQAg&usg=AOvVaw3xHZ_JJmlOmVR4UWfKfyaS" target="_parent">Fadhli</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
 			</div>
 		</div>
 	</footer>
