--- a/kontak/index.html
+++ b/kontak/index.html
@@ -44,7 +44,7 @@
 		<section class="students">
 			<div class="container">
 				<div class="section-header text-center">
-					<h1>Kontak OSIS</h1>
+					<h1>Kontak Kesiswaan</h1>
 					<div class="divider mx-auto"></div>
 					<div class="waktu">
 						<br><p>Tanggal</p>
