--- a/kontak/index.html
+++ b/kontak/index.html
@@ -132,7 +132,7 @@
 		                            <tbody>
 		                                <tr>
 		                                    <td>1</td>
-		                                    <td><a href="https://siswa7.vercel.app">Website : https://siswa7-vercel.app</a></td>
+		                                    <td><a href="https://siswa7.vercel.app">Website : https://siswa7.vercel.app</a></td>
 		                                </tr>
 		                                <tr>
                                     		<td>2</td>
