--- a/kontak/index.html
+++ b/kontak/index.html
@@ -170,9 +170,9 @@
             <h3 style="text-align: center;">Contact Form</h3>
               <div class="contact-form">
             <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
-              <strong>Terima Kasih-!!</strong> Pesan Kamu Sudah Kami Terima...
+              <strong>Terima Kasih!</strong> Pesan Kamu Sudah Saya Terima...
             </div>
-              <form style="text-align: center;" id="contact" name="mfarels-contact-form">
+              <form style="text-align: center;" id="contact" name="fadhlirynx16-contact-form">
                 <div class="row">
 
 
