--- a/kontak/index.html
+++ b/kontak/index.html
@@ -172,7 +172,7 @@
             <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
               <strong>Terima Kasih!</strong> Pesan Kamu Sudah Saya Terima...
             </div>
-              <form style="text-align: center;" id="contact" name="fadhlirynx16-contact-form">
+              <form style="text-align: center;" id="contact" name="mfarels-contact-form">
                 <div class="row">
 
 
