--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			        	<a class="nav-link js-scroll-trigger" href="">Home<span class="sr-only">(current)</span></a>
 			    	</li>
 			    	<li class="nav-item">
-			        	<a class="nav-link js-scroll-trigger" href="pengurus-organisasi/">Daftar Guru</a>
+			        	<a class="nav-link js-scroll-trigger" href="pengurus-organisasi/">Daftar Siswa</a>
 			      	</li>
 			      	<li class="nav-item">
 			        	<a class="nav-link js-scroll-trigger" href="absen/">Daftar Absen</a>
