--- a/absen/index.html
+++ b/absen/index.html
@@ -29,7 +29,7 @@
 			        	<a class="nav-link js-scroll-trigger" href="../">Home<span class="sr-only">(current)</span></a>
 			    	</li>
 			    	<li class="nav-item">
-			        	<a class="nav-link js-scroll-trigger" href="../pengurus-organisasi/">Pengurus Organisasi</a>
+			        	<a class="nav-link js-scroll-trigger" href="../pengurus-organisasi/">Daftar Siswa</a>
 			      	</li>
 			      	<li class="nav-item">
 			        	<a class="nav-link js-scroll-trigger" href="../absen/">Daftar Absen</a>
@@ -348,7 +348,7 @@
 									<tr>
 										<td>1</td>
 										<td>Senin / Mapel I</td>
-										<td>PJOK, PPKN, EFKT, PKK</td>
+										<td>MTK, PJOK, PABP</td>
 									</tr>
 									<tr>
 										<td>2</td>
@@ -358,17 +358,17 @@
 									<tr>
 										<td>3</td>
 										<td>Rabu / Mapel III</td>
-										<td>PPKT, PKK</td>
+										<td>PKK, BK, PPKT</td>
 									</tr>
 									<tr>
 										<td>4</td>
 										<td>Kamis / Mapel IV</td>
-										<td>MTK, B.INDO, PAZW, BK</td>
+										<td>PKK, PPKN, EFKT, B.INDO</td>
 									</tr>
 									<tr>
 										<td>5</td>
 										<td>Jumat / Mapel V</td>
-										<td>PABP, B.INGGRIS, SUNDA, PPKT</td>
+										<td>B.INGGRIS, PPKT, B.SUNDA, PAZW</td>
 									</tr>
 									<tr>
 										<td>6</td>
