--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
 	<link rel="shortcut icon" href="img/osis.png">
 
-	<title>Welcome To Website XI KT1</title>
+	<title>Website SMKN7 | Siswa XI KT1</title>
 </head>
 <body id="page-top">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="mainNav">
